<resources>
    <string name="app_name">Unicorn</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="Register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">logout</string>
    <string name="name_surname"><![CDATA[Name & Surname]]></string>
    <string name="upload_image">Upload Image</string>
    <string name="create">Create</string>
    <string name="events">Events</string>
    <string name="interests">Interests</string>
    <string name="books">Books</string>
    <string name="roommates">Roommates</string>
    <string name="birth_date">Birth Date</string>
    <string name="grade">Grade</string>
    <string name="depatment">Depatment</string>
    <string name="write_a_brief_description">Write a Brief Description</string>
    <string name="department">department</string>
    <string name="Department">Department</string>
    <string name="you_can_download_your_schedule_image">You can download your schedule image:</string>
    <string name="name">Name</string>
    <string name="what_time_do_you_get_up">What time do you get up:</string>
    <string name="sleep">Name</string>
    <string name="what_time_do_you_sleep">What time do you sleep:</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="how_many_roommates_do_you_want">How many roommates do you want:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_sleep_with_light_off">Do you sleep with light off:</string>
    <string name="no1">No</string>
    <string name="yes1">Yes</string>
    <string name="do_you_play_an_instrument">Do you play an instrument:</string>
    <string name="no2">No</string>
    <string name="yes2">Yes</string>
    <string name="do_you_cook">Do you cook:</string>
    <string name="no3">No</string>
    <string name="yes3">Yes</string>
    <string name="do_you_smoke">Do you smoke:</string>
    <string name="sometimes">Sometimes</string>
    <string name="no4">No</string>
    <string name="yes4">Yes</string>
    <string name="do_you_work_in_the_room">Do you work in the room</string>
    <string name="east">East</string>
    <string name="main">Main</string>
    <string name="campus">Campus</string>
    <string name="women">Women</string>
    <string name="man">Man</string>
    <string name="gender">Gender:</string>
    <string name="roommates1">ROOMMATES</string>
    <string name="mactv1">Music Types</string>
    <string name="mactv2">Sports</string>
    <string name="mactv3">Books</string>
    <string name="mactv4">Clubs</string>
    <string name="name_surname1"><![CDATA[Name & Surname]]></string>
    <string name="name_surname2"><![CDATA[Name & Surname:]]></string>

</resources>