<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE1E1"
    tools:context=".RoommatesInfo">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="411dp"
        android:layout_height="43dp"
        android:background="@color/material_dynamic_primary30"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/radioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.72" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#E4D2D2"
        android:text="@string/man"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton3"
        app:layout_constraintEnd_toStartOf="@+id/radioButton16"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="15dp"
        android:text="@string/women"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/campus"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/main"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="15dp"
        android:text="@string/east"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton5"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/do_you_work_in_the_room"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/radioButton5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/yes4"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton9"
        app:layout_constraintEnd_toStartOf="@+id/radioButton6"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/no4"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton9"
        app:layout_constraintStart_toEndOf="@+id/radioButton5"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="104dp"
        android:layout_height="28dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="102dp"
        android:text="@string/sometimes"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/radioButton6"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:text="@string/do_you_smoke"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/radioButton8"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/yes3"
        app:layout_constraintBottom_toTopOf="@+id/radioButton10"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="15dp"
        android:text="@string/no3"
        app:layout_constraintBottom_toTopOf="@+id/radioButton11"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/do_you_cook"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton10"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="14dp"
        android:text="@string/yes2"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton11"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="14dp"
        android:text="@string/no2"
        app:layout_constraintBottom_toTopOf="@+id/radioButton12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton10"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/do_you_play_an_instrument"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton12"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/yes1"
        app:layout_constraintBottom_toTopOf="@+id/radioButton14"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton13"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="14dp"
        android:text="@string/no1"
        app:layout_constraintBottom_toTopOf="@+id/radioButton15"
        app:layout_constraintStart_toEndOf="@+id/radioButton12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="23dp"
        android:text="@string/do_you_sleep_with_light_off"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton14"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="14dp"
        android:text="@string/yes"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton15"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="14dp"
        android:text="@string/no"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/radioButton14"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/how_many_roommates_do_you_want"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="45dp"
        android:layout_height="28dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/editTextText6"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="45dp"
        android:layout_height="28dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/editTextText6"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="45dp"
        android:layout_height="28dp"
        android:layout_marginBottom="15dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/editTextText6"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/what_time_do_you_sleep"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/sleep"
        app:layout_constraintBottom_toTopOf="@+id/editTextText7"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/what_time_do_you_get_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/you_can_download_your_schedule_image"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="253dp"
        android:layout_height="165dp"
        android:layout_marginStart="131dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton16"
        android:layout_width="90dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="17dp"
        android:text="Woman"
        app:layout_constraintBottom_toTopOf="@+id/radioButton4"
        app:layout_constraintStart_toEndOf="@+id/radioButton" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="52dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Roommates"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>